recursion.cons.last.Last.scala.error
Erreur de compilation :
Last:4: error: illegal start of simple pattern
    case [v] => v
         ^Last:5: error: '=>' expected but ';' found.
    case _::q => last(q)
^