recursion.cons.last.Last.scala.code
def last(l:List[Int]): Int = {
  l match {
    case [v] => v
    case _::q => last(q)
  }
}